# carservice-admin

./: README.md  manage.py  setup.cfg
carservice_admin/: asgi.py  settings.py
carservice_admin/apps/login/: urls.py  views.py
carservice_admin/carservice_admin/: settings.py  urls.py  wsgi.py
carservice_admin/carservice_admin/apps/website/: admin.py  apps.py  urls.py
carservice_admin/carservice_admin/apps/website/forms/: business_form.py  customer_form.py  employee_form.py
carservice_admin/carservice_admin/apps/website/models/: bank_accounts.py  cities.py  customer.py  employee.py  person.py  provinces.py
carservice_admin/carservice_admin/apps/website/views/: customers_views.py
templates/: base.html  login.html
templates/session/: login.html
