[metadata]
name = CarService-admin
authors_email = emilianomodula@gmail.com
description = A managment system for clients

# Flake8 Configuration
[flake8]
import-order-style = google
application-import-names = flake8
#Black formatter default
max-line-length = 88

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 79
multi_line_output = 5
